--- a/section-2-18-STARTER/index.html
+++ b/section-2-18-STARTER/index.html
@@ -9,10 +9,20 @@
 <body>
   <div id="app">
     <label>
-      <input type="checkbox" /> Purple
+      <input type="checkbox" v-model="isPurple"/> Purple
     </label>
 
-    <div class="circle">
+    <select v-model="isPurple">
+      <option value="">White</option>
+      <option value="text-black">Black</option>
+      <option value="text-orange">Orange</option>
+    </select>
+
+    <input type="number" v-model="size">
+
+    <div class="circle" :class="[isPurple,circle_classes]"
+    :style="[{width: size + 'px', height: size + 'px', lineHeight: size + 'px'},
+    {transform: 'rotate(30deg)'}]">
       Hi!
     </div>
   </div>
