changed title in index.html

--- a/music-app/music/index.html
+++ b/music-app/music/index.html
@@ -16,7 +16,7 @@
     />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>RhythmicRealm | Listen to Great Music!</title>
   </head>
   <body class="bg-gray-100 font-sans pb-24">
     <div id="app"></div>
